[gd_scene load_steps=2 format=3 uid="uid://dlnjqvgtgl4s2"]

[ext_resource type="Script" uid="uid://bwcod5i06bq0n" path="res://pause_menu.gd" id="1_4a8jl"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_4a8jl")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.501961)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="ResumeButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Return to Game"

[node name="TitleButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Return to Title Screen"

[node name="CreditsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Credits"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Exit Game"

[node name="CreditsPanel" type="Panel" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -105.0
offset_top = -93.0
offset_right = 113.0
offset_bottom = 93.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="CreditsPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -62.5
offset_right = 62.5
offset_bottom = 23.0
grow_horizontal = 2
text = "Credits Go here "
horizontal_alignment = 1

[node name="CloseCreditsButton" type="Button" parent="CreditsPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -15.5
offset_right = 25.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
text = "Close"
